packages/midi-markdown/midi_markdown-0.1.0.tar.gz/midi_markdown-0.1.0/tests/fixtures/invalid/imports/duplicate_aliases.mmd
---
device: Library with Duplicate Alias
---

# This library has an alias named "device_a_init" which conflicts
# with test_device_a.mml

@alias device_a_init {ch} "Duplicate alias name"
  - cc {ch}.99.99
@end
